# virtual-machine

./: CMakeLists.txt  Exceptions.h  Loader.cpp  Loader.h  Memory.cpp  Memory.h  PSW.h  Processor.cpp  Processor.h  Types.h  main.cpp
Commands/: Command.cpp  Command.h  Conversions.cpp  Conversions.h  IMath.cpp  IMath.h  IO.cpp  IO.h  IntegerArithmetic.cpp  IntegerArithmetic.h  Jumps.cpp  Jumps.h  Movements.cpp  Movements.h  RMath.cpp  RMath.h  RealArithmetic.cpp  RealArithmetic.h
demo/: fmath.txt  imath.txt  io.txt  jumps.txt  move.txt  rmath.txt  subprogram.txt
